.metadata/.plugins/org.eclipse.cdt.ui/untitked.build.log
13:46:05 **** Incremental Build of configuration Debug for project untitked ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\untitked.o" "..\\src\\untitked.cpp" 
..\src\untitked.cpp: In function 'void write_pass1()':
..\src\untitked.cpp:19:11: warning: comparison of integer expressions of different signedness: 'int' and 'std::vector<std::__cxx11::basic_string<char> >::size_type' {aka 'long long unsigned int'} [-Wsign-compare]
   while(s < v.size()){
         ~~^~~~~~~~~~
..\src\untitked.cpp: In function 'void pass1()':
..\src\untitked.cpp:48:2: error: 'parser' was not declared in this scope
  parser p;
  ^~~~~~
..\src\untitked.cpp:48:2: note: suggested alternative:
In file included from ..\src\untitked.cpp:6:
..\src\parser.h:13:7: note:   'assembler::parser'
 class parser {
       ^~~~~~

13:46:14 Build Failed. 1 errors, 1 warnings. (took 9s.79ms)

